created game logic

--- a/index.html
+++ b/index.html
@@ -17,13 +17,7 @@
 
 	<p>Play the game because it is fun, Dammit!</p>
 
-<div>
-    <img src="images/images/back.png" alt="Queen of Diamonds">
-    <img src="images/images/back.png" alt="Queen of Hearts">
-    <img src="images/images/back.png" alt="King of Diamonds">
-    <img src="images/images/back.png" alt="King of Hearts">
-
-</div>
+<div id="game-board" class="board clearfix"></div>
   </main>
 <footer class="clearfix">
 <p class="copyright">Copyright 2017</p>
